Improved Sprite Viewer: Save sprite, TBBlue sprite viewer, inverse sprite
Improved write-mapped-memory remote command to allow up to 64kb
Improved a bit menu drawing: now colours are greyscaled when multitask disabled
Improved stdout driver. Now can show ansi colours
Improved messages windows. Can now find text using f and n
Fixed turbo mode and breakpoints. Breakpoints were disabled when changing turbo mode
Fixed latency problems on all audio drivers
Fixed AY sound bugs when volume levels where > 15
Fixed Windows pthreads version
Fixed TBBlue reset i/o ports when reset and hard reset
Updated TBBlue boot loader
Some other minor bugfixes and improvements



Version 5.0. 21 April 2017 - Chase H.Q. edition

Finally I have succeded emulating Sinclair QL. I dedicated a lot of hours trying to guess how the keyboard work.
There is little documentation and I had to do lots of dissassemblies of the ROM and testing keyboard to know how it work...
So, hard work, this is a Quantum Leap, so this is a new major version, 5.0!
Complete changelog:

Added Sinclair QL emulation
Added remote command protocol. You can do enhanced debugging on ZEsarUX by using a telnet client. 
  There are a lot of commands, even many commands exclusive to this protocol and not found on the GUI, like:
* load-source-code
* hexdump-internal
* set-register

Added Easter Egg ;)
Added Specdrum emulation
Added RZX playback support
Added Multiface One, 128 and Three emulation
Added setting to write configuration file
Added menu item to reload IDE and MMC contents from file. You can now modify a used file outside the emulator and reload its contents
Added autosave snapshot at fixed interval
Added hardware debug port to output ascii characters or numbers directly on host console
Added two unused ports from the ZXI pool for some internal ZEsarUX features. See docs/zesarux_zxi_registers.txt 
Added Hotswap from 128k to +2A, and +2A to 128k
Added File Viewer 
Added support for drag&drop on Mac OS X, SDL2