@@ -3042,6 +3042,7 @@ int util_write_configfile(void)
 
   if (autoselect_snaptape_options.v==0)       ADD_STRING_CONFIG,"--noautoselectfileopt");
   if (screen_show_splash_texts.v==0)          ADD_STRING_CONFIG,"--nosplash");
+  if (screen_show_cpu_usage.v)                ADD_STRING_CONFIG,"--cpu-usage");
   if (opcion_no_splash.v)                     ADD_STRING_CONFIG,"--nowelcomemessage");
   if (rainbow_enabled.v)                      ADD_STRING_CONFIG,"--realvideo");
 
