@@ -28,6 +28,7 @@ Improved write-mapped-memory remote command to allow up to 64kb
 Improved a bit menu drawing: now colours are greyscaled when multitask disabled
 Improved stdout driver. Now can show ansi colours
 Improved messages windows. Can now find text using f and n
+Improved footer. Host CPU usage % on footer is not enabled by default to avoid confussion with emulated CPU speed. You can enable it with a setting. Host CPU usage % is not show on Windows.
 Fixed turbo mode and breakpoints. Breakpoints were disabled when changing turbo mode
 Fixed latency problems on all audio drivers
 Fixed AY sound bugs when volume levels where > 15
